@@ -336,9 +336,13 @@ namespace
         continue;
       else if (!groups_our_server_has.count (*it)) {
         goodness.raise_to_warn ();
-        char buf[1024];
-        g_snprintf (buf, sizeof(buf), _("Warning: Unknown group \"%s\"."), it->c_str());
-        errors.insert (buf);
+        char * tmp = g_strdup_printf (
+          _("Warning: The posting profile's server doesn't carry newsgroup\n"
+            "\t\"%s\".\n"
+            "\tIf the group name is correct, switch profiles in the \"From:\"\n"
+            "\tline or edit the profile with \"Edit|Manage Posting Profiles\"."), it->c_str());
+        errors.insert (tmp);
+        g_free (tmp);
       }
     }
 
@@ -371,9 +375,13 @@ namespace
       if (!groups_our_server_has.count (*it))
       {
         goodness.raise_to_warn ();
-        char buf[1024];
-        g_snprintf (buf, sizeof(buf), _("Warning: Unknown group \"%s\"."), it->c_str());
-        errors.insert (buf);
+        char * tmp = g_strdup_printf (
+          _("Warning: The posting profile's server doesn't carry newsgroup\n"
+            "\t\"%s\".\n"
+            "\tIf the group name is correct, switch profiles in the \"From:\"\n"
+            "\tline or edit the profile with \"Edit|Manage Posting Profiles\"."), it->c_str());
+        errors.insert (tmp);
+        g_free (tmp);
       }
 #if 0
       if (data.get_group_permission (*it) == 'n')
