@@ -23,6 +23,7 @@
  372013 use pan's error log, rather than g_message(), in connection worker threads
  358925 download speeds aren't calculated accurately/correctly
  355805 add "mark group read before xover" to prefs dialog
+ 397347 posting error message could be more helpful
 
 0.120 "Plate of Shrimp"
  356329 'Save Attachments' only saves one of multiple attachments (Walt)
